# Bitspace-Loader

./: .gitignore  CMakeLists.txt  HACKING  README
cmake/modules/: .FindBitspace.cmake.swp  FindBitspace.cmake
resources/: resources.qrc
resources/images/icon/: loader-icon.xcf
src/: CMakeLists.txt  ConfigDialog.cpp  ConfigDialog.h  ConfigDialog.ui  FileDelegate.cpp  FileDelegate.h  FileModel.cpp  FileModel.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  TransferItem.cpp  TransferItem.h  loader_global.cpp  loader_global.h  main.cpp
